# skenion-runtime

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  TRADEMARKS.md  build.rs  release-please-config.json
.github/workflows/: backfill-canonical-release-tags.yml  ci.yml  publish.yml  release-please.yml  semantic-pr.yml
docs/: api-inventory.md
fixtures/current-0.1/invalid/: incompatible-edge.project.json
fixtures/current-0.1/valid/: clear-color-render.project.json  minimal-value.project.json
scripts/: check-local-contracts-integration.sh  check-runtime-asset-s3-existing.sh  package-runtime-asset.sh  prepare-lockstep-release-pr.py  publish-runtime-asset-s3.sh  select-contracts-checkout.sh  smoke-runtime-binary.sh  update-runtime-release-downloads.sh  validate-runtime-asset-packaging.sh  validate-runtime-asset-s3-publisher.sh  validate-runtime-publish-workflow.sh
src/: asset_store.rs  audio_backend.rs  clock.rs  clock_source_manager.rs  collaboration.rs  contract.rs  control_state.rs  control_value.rs  conversion.rs  current_node_identity.rs  diagnostic.rs  dsp.rs  extension_manager.rs  http_live_disabled.rs  io_device_manager.rs  issue.rs  lib.rs  log_store.rs  main.rs  midi_input.rs  object_spec.rs  object_text.rs  package_registry.rs  planner.rs  preview_control_state.rs  preview_manager.rs  project.rs  project_current.rs  project_v02.rs  realtime.rs  registry.rs  request_payload.rs  runtime_info.rs  runtime_time.rs  runtime_transport.rs  scheduler.rs  serve.rs  server.rs  session.rs  session_registry.rs  (+4 more)
src/control_state/: tests.rs
src/dsp/: domains.rs  mod.rs  offline.rs  planning.rs  ports.rs  realtime.rs  tests.rs  types.rs  values.rs
src/nodes/: core.rs  interface.rs  mod.rs
src/nodes/core/: audio.rs  control.rs  mod.rs  patching.rs  tests.rs
src/object_spec/: ports.rs  projection.rs  resolver.rs  tests.rs  types.rs
src/object_spec/resolver/: atoms.rs  audio.rs  control.rs  outcome.rs  package.rs  parser.rs  project_patch.rs  reference.rs
src/project_current/: tests.rs
src/realtime/: control_input.rs  graph_command.rs  node_catalog.rs  node_input.rs  presence.rs  protocol.rs  session_engine.rs  state.rs  tests.rs  wire.rs
src/realtime/graph_command/: control.rs  events.rs  object_nodes.rs  outcome.rs  types.rs
src/render/: mod.rs  native.rs  preview_document.rs  scene.rs
src/server/: logs.rs  state.rs  telemetry.rs  tests.rs  types.rs
src/session/: binding_formats.rs  collaboration.rs  control.rs  history.rs  node_catalog.rs  node_mutation.rs  paste.rs  planning.rs  projection.rs  tests.rs  types.rs  view_state.rs
src/session/node_mutation/: graph_nodes.rs  object.rs  types.rs  validation.rs
tests/: io_devices.rs  loader.rs  realtime.rs
