[package]
name = "skenion-runtime"
version = "0.21.0"
edition = "2024"
description = "Skenion native runtime"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
skenion-contracts = { git = "https://github.com/echovisionlab/skenion-contracts", tag = "skenion-contracts-v0.22.0" }
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6", features = ["cors"] }
wgpu = "29.0.3"
winit = "0.30.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
