[package]
name = "skenion-runtime"
version = "0.49.0"
edition = "2024"
description = "skenion native runtime"
license = "Apache-2.0"
repository = "https://github.com/skenion/skenion-runtime"
homepage = "https://github.com/skenion/skenion-runtime#readme"
readme = "README.md"
keywords = ["skenion", "runtime", "graph", "visual", "audio"]
categories = ["multimedia", "rendering"]
rust-version = "1.85"
publish = false

[package.metadata.skenion]
supported-contracts-range = ">=0.0.0 <1.0.0"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.18.1"
futures-util = "0.3"
midir = "0.11"
pollster = "0.4.0"
rand = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
skenion-contracts = "0.61.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
wgpu = "29.0.3"
winit = "0.30.12"

[dev-dependencies]
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
